# cToAlias

./: CMakeLists.txt  README.md
src/: intake.cpp  intake.hpp  main.cpp  preprocessor.cpp  syntax.hpp
